- Please report any issue!

-----------------------------------------------------------------------
 VERSION 0.1.0 Beta 18
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0-beta18

New Commands:

- Events:    Added "set_mouse_move_callback" #117
- Callbacks: Added "set_exit_callback" #142

Fixes:

- Tabs:                Fixed tabs being run-time addable
- Mouse/key Callbacks: Now work for builtin windows
- Active Window:       Fixed names in debug

-----------------------------------------------------------------------
 VERSION 0.1.0 Beta 17
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0-beta17

Fixes:

- Plot:  Adding new data to a plot bring all data into view
- MacOs: Fixed unthrottled event loop when minimized
- Linux: Fixed unthrottled event loop when minimized

-----------------------------------------------------------------------
 VERSION 0.1.0 Beta 16
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0-beta16

Fixes:

- MacOs: Fixed vsync issue mentioned on reddit.

-----------------------------------------------------------------------
 VERSION 0.1.0 Beta 15
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0-beta15

New Commands:

- Application:      "set_vsync" now availble
- Standard Windows: "set_window_pos" now works for standard windows #146
- Standard Windows: "get_window_pos" now works for standard windows #146
- Standard Windows: "set_item_height" now works for standard windows #146
- Standard Windows: "set_item_width" now works for standard windows #146
- Standard Windows: "get_item_height" now works for standard windows #146